# MekuJira

./: README.md  package.json
.github/workflows/: release.yml
MekuJira/: README.md  package-lock.json  package.json
MekuJira/scripts/: release.sh
MekuJira/src/: app.html
MekuJira/src-tauri/: Cargo.toml  tauri.conf.json
MekuJira/src-tauri/capabilities/: default.json
MekuJira/src-tauri/src/: keychain.rs  lib.rs  main.rs  notification.rs
MekuJira/src-tauri/src/commands/: bookmarks.rs  settings.rs  window.rs
MekuJira/src-tauri/src/jira/: client.rs  types.rs
MekuJira/src-tauri/src/store/: bookmarks.rs  cache.rs  config.rs  mod.rs
MekuJira/src-tauri/src/tray/: mod.rs  panel.rs  window.rs
MekuJira/src-tauri/src/tray/panel/: macos.rs  windows.rs
MekuJira/src/lib/api/: bookmarks.ts  jira.ts  settings.ts
MekuJira/src/lib/components/: AppHeader.svelte  BookmarkableIssueCard.svelte  DashboardSection.svelte  DashboardView.svelte  IssueCard.svelte  StatusBadge.svelte  TrackingView.svelte
MekuJira/src/lib/stores/: issues.ts  settings.ts
MekuJira/src/lib/types/: index.ts
MekuJira/src/routes/: +layout.svelte
MekuJira/src/routes/dashboard/: +page.svelte
MekuJira/src/routes/popup/: +page.svelte
MekuJira/src/routes/settings/: +page.svelte
security-check-assistant/: .env.example  .gitignore  DEPLOYMENT.md  README.md  REVIEW_REPORT.md  docker-compose.prod.yml  docker-compose.yml
security-check-assistant/backend/: Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
security-check-assistant/backend/app/: __init__.py  config.py  main.py
security-check-assistant/backend/app/api/routes/: answer.py  documents.py  excel.py  report.py  review.py
security-check-assistant/backend/app/core/: answer_engine.py  confidence_scorer.py  excel_parser.py  file_utils.py  format_detector.py  pageindex_client.py
security-check-assistant/backend/app/db/: database.py
security-check-assistant/backend/app/db/repositories/: answer_repository.py  document_repository.py  knowledge_repository.py  question_repository.py  session_repository.py
security-check-assistant/backend/app/models/: __init__.py  answer.py  document.py  knowledge.py  question.py  session.py
security-check-assistant/backend/app/scripts/: import_knowledge.py
security-check-assistant/backend/tests/: conftest.py  test_api.py  test_core.py  test_models.py
security-check-assistant/frontend/: Dockerfile.prod  package-lock.json  package.json
security-check-assistant/frontend/src/lib/api/: client.ts
security-check-assistant/frontend/src/lib/components/: ConfidenceBadge.svelte  ExcelPreview.svelte  FileUpload.svelte  StatusBadge.svelte
security-check-assistant/frontend/src/routes/: +layout.svelte  +page.svelte
security-check-assistant/frontend/src/routes/documents/: +page.svelte
security-check-assistant/frontend/src/routes/upload/: +page.svelte
security-check-assistant/scripts/: backup.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: keychain.rs  lib.rs  main.rs  scheduler.rs  tray.rs
src-tauri/src/commands/: focus.rs  jira.rs  mod.rs  settings.rs  window.rs
src-tauri/src/jira/: auth.rs  client.rs  types.rs
src-tauri/src/store/: cache.rs  config.rs  focus_state.rs  mod.rs
src-tauri/src/tray/: window.rs
src/lib/api/: focus.ts  jira.ts
src/lib/components/: AppHeader.svelte  BookmarkableIssueCard.svelte  DashboardSection.svelte  DashboardView.svelte  FilterBar.svelte  FocusWidget.svelte  IssueCard.svelte  IssueList.svelte  StatusBadge.svelte  TrackingView.svelte
src/lib/stores/: focus.ts  settings.ts
src/lib/types/: index.ts
src/routes/popup/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/widget/: +page.svelte
template/: README.md  package.json
template/src/: app.css  app.html
template/src-tauri/: Cargo.toml  tauri.conf.json
template/src-tauri/capabilities/: default.json
template/src-tauri/src/: lib.rs  main.rs
template/src-tauri/src/tray/: mod.rs  window.rs
template/src/routes/: +page.svelte
template/src/routes/popup/: +page.svelte
template/src/routes/settings/: +page.svelte
(+2 files in other folders)
