[package]
name = "jira-focus"
version = "0.1.0"
description = "JIRA Focus - Desktop issue focus app"
authors = ["you"]
edition = "2021"

[lib]
name = "jira_focus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
argon2 = "0.5"
hostname = "0.4"
whoami = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
urlencoding = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
block2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["block2", "NSEvent", "NSRunningApplication", "NSWorkspace"] }
objc2-foundation = { version = "0.3", features = ["block2", "NSNotification", "NSString", "NSNotificationCenter", "NSOperation"] }
