[package]
name = "mekujira"
version = "0.2.10"
description = "MekuJira - Desktop JIRA app"
authors = ["you"]
edition = "2021"

[lib]
name = "mekujira_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
argon2 = "0.5"
hostname = "0.4"
whoami = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
urlencoding = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["block2", "NSApplication", "NSEvent", "NSRunningApplication", "NSWorkspace"] }
objc2-foundation = { version = "0.3", features = ["block2", "NSNotification", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
