[package]
name = "tauri-menubar-template"
version = "0.1.0"
description = "Minimal macOS menu bar app template"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_menubar_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
block2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["block2", "NSEvent", "NSRunningApplication", "NSWorkspace"] }
objc2-foundation = { version = "0.3", features = ["block2", "NSNotification", "NSString"] }
